kubernetes/main/apps/vpn/pod-gateway/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway
  labels:
    app.kubernetes.io/instance: pod-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: pod-gateway
      app.kubernetes.io/name: pod-gateway
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
    - toEntities:
        - cluster
