kubernetes/main/apps/vpn/pod-gateway/app/webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-gateway
  labels:
    app.kubernetes.io/name: pod-gateway
    app.kubernetes.io/instance: pod-gateway
  annotations:
    cert-manager.io/inject-ca-from: "vpn/pod-gateway-webhook-tls"
webhooks:
  - name: pod-gateway
    clientConfig:
      service:
        name: pod-gateway-webhook
        namespace: vpn
        path: "/wh/mutating/setgateway"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "Namespaced"
    failurePolicy: Fail
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
    namespaceSelector:
      matchLabels:
        routed-gateway: "true"
